# prompt-library

./: .env.example  .gitattributes  .gitignore  .gitmodules  .wave_commit.ps1  CLAUDE.md  COMPLIANCE_Model_Provenance_DoD_2026-06-27.md  NEXUS_Saturday_Digest_2026-06-20.md  NEXUS_Sunday_Digest_2026-06-21.md  NEXUS_Weekend_Autonomous_Run_Digest_2026-06-21.md  OLIVER_mirror_log.txt  QUICK_REFERENCE.md  README.md  agent_health_monitor.py  backup_helper.py  changelog_manager.py  compliance_report.py  config_manager.py  decision_log.py  dependency_checker.py  env_checker.py  error_logger.py  errors.json  git_commit_helper.py  new_repo.py  nexus_status.py  nh_licensing.html  note_taker.py  professional_editorial_writer.py  prompt_manager.py  prompt_tester.py  quick_ref.py  repo_sync_checker.py  requirements.txt  structure_validator.py  task_manager.py  weekly_summary.py  x_publisher.py
artifacts/: README.md  asset_metadata_sidecar.py  batch_prompt_generator.py  bootstrap.py  catalog_dashboard.py  content_rating_compliance_guard.py  fashion_modeling_prompt_generator.py  grok_video_pack_exporter.py  integration_utils.py  model_profile_manager.py  multishot_video_compiler.py  negative_prompt_builder.py  onetake_choreography_builder.py  prompt_quality_scorer.py  prompt_version_control.py  pyproject.toml  reference_library_indexer.py  sequence_consistency_auditor.py  studio_paths.py  template_library_manager.py  workspace_status_reporter.py
artifacts/catalog/: asset_metadata_sidecar.py  catalog_dashboard.py  reference_library_indexer.py  template_library_manager.py  (+1 more)
(+1492 files in other folders)
