[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "grok-artifacts"
version = "1.2.0"
description = "Studio production toolchain for Grok Projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dashboard = ["streamlit>=1.28", "pandas>=2.0"]
dev = ["pytest>=7.0"]

[project.scripts]
grok-studio = "core.master_launcher:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lib*", "core*", "profile*", "prompts*", "video*", "catalog*", "compliance*", "export*"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = [".", "..", "../tools"]